--- a/src/components/global/navbar.astro
+++ b/src/components/global/navbar.astro
@@ -7,20 +7,20 @@ import StarTopLeft from "../assets/StarTopLeft.astro";
 import StarTopRight from "../assets/StarTopRight.astro";
 ---
 
-<nav
-  class="justify-between overflow-hidden relative bg-white/30 dark:bg-white/5"
->
+<nav class="mb-8 z-50">
   <div
-    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 relative border border-dashed border-zinc-300 dark:border-zinc-700"
+    class="flex py-2 px-2 relative border border-dashed border-zinc-300 dark:border-zinc-700"
   >
     <StarTopLeft />
     <StarTopRight />
     <StarBottomLeft />
     <StarBottomRight />
-    <Logo />
-    <div class="flex items-center space-x-8">
-      <Text href="/features">
-        <Text tag="span" variant="textBase"> Features </Text>
+    <div class="flex items-center">
+      <Logo />
+    </div>
+    <div class="flex text-white items-center space-x-8">
+      <Text tag="a" href="/features">
+        <Text variant="textBase"> Features </Text>
       </Text>
       <Text href="/pricing">
         <Text tag="span" variant="textBase"> Pricing </Text>
